--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "Zustand store patterns with immer, persist, devtools, and type-safe modals",
   "type": "module",
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "types": "./src/index.ts",
-      "import": "./src/index.ts"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
     },
     "./package.json": "./package.json"
   },
@@ -65,5 +65,6 @@
     "url": "https://github.com/pleme-io/pleme-zustand-patterns.git"
   },
   "license": "MIT",
-  "author": "Pleme.io Team"
+  "author": "Pleme.io Team",
+  "module": "./dist/index.js"
 }
