--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pleme/zustand-patterns",
+  "name": "@pleme-io/zustand-patterns",
   "version": "1.0.0",
   "description": "Zustand store patterns with immer, persist, devtools, and type-safe modals",
   "type": "module",
